--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <link
     href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap"
     rel="stylesheet"
@@ -18,11 +20,7 @@
         padding: 1rem;
       "
     >
-      <!-- <a
-        href="#"
-        style="color: #ffffff; font-size: 1.5rem; text-decoration: none"
-        >STYLOS
-      </a> -->
+     
 
       <div>
         <img src="logo-nav2.svg" alt="" width="200px">
@@ -31,6 +29,7 @@
         <input
           type="text"
           placeholder="Buscar productos"
+          id="filter-input"
           style="
             background-color: #ffffff;
             border: none;
